# tomlantic

./: .gitignore  CONTRIBUTING  LICENCE-0BSD  LICENCING  README.md  devbox.json  flake.nix  pyproject.toml  showcase.py  test.py  use_lowest_versions.py
.github/workflows/: build-slsa3.yml  checks.yml  publish-slsa3-auto.yml  publish-slsa3-manual.yml
tests/: test-array-of-tables.py  test-grassplain.py  test-lottemusicfriend.py  test-phonyplane.py  test.py
tomlantic/: __init__.py  tomlantic.py
