[project]
name = "tomlantic"
version = "0.2.2"
description = "marrying pydantic models and tomlkit documents"
authors = ["Mark Joshwel <mark@joshwel.co>"]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.0",
    "tomlkit>=0.8",
]
license = "Unlicense OR 0BSD"
license-files = ["LICENSE*"]
classifiers = [
  "License :: OSI Approved :: The Unlicense (Unlicense)",
  "License :: OSI Approved :: 0BSD License",
]

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "mypy>=1.18.1",
    "ruff>=0.13.0",
]

[tool.black]
line-length = 90

[tool.isort]
line_length = 90
profile = "black"
