[project]
name = "tomlantic"
version = "0.2.2"
description = "marrying pydantic models and tomlkit documents"
authors = [
  {name = "Mark Joshwel", email = "mark@joshwel.co"},
]
maintainers = [
  {name = "Mark Joshwel", email = "mark@joshwel.co"},
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.0",
    "tomlkit>=0.8",
]
license = "Unlicense OR 0BSD"
license-files = ["LICENSE*"]

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "mypy>=1.18.1",
    "ruff>=0.13.0",
]

[tool.black]
line-length = 90

[tool.isort]
line_length = 90
profile = "black"
